Fixed margin issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -463,11 +463,6 @@ main
 *
 ********************************************/
 
-.beard
-{
-  margin-top: 10px;
-}
-
 .beard-intro
 {
     background-color: rgb(250,250,250);
